--- a/src/style.css
+++ b/src/style.css
@@ -101,10 +101,13 @@ input[type="text"]:focus {
 }
 
 #forecastWeather > div {
+  font-weight: bold;
+  font-size: 20px;
   display: flex;
   gap: 20px;
   align-items: center;
   justify-content: space-around;
+  border-bottom: 4px solid black;
 }
 
 /*footer styling*/
